# rust-ticket

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: quick_dev.rs
src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
src/ctx/: mod.rs
src/log/: mod.rs
src/model/: mod.rs
src/web/: mw_auth.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
web_folder/: index.html
