[package]
name = "rust-ticket"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
axum = "0.7"
lazy-regex = "3.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.7.0"
strum_macros = "0.26.2"
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.9"
